metro-ui-service

--- a/metro-ui-service/src/main/resources/META-INF/resources/routeAdd.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/routeAdd.xhtml
@@ -1,34 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:h="http://java.sun.com/jsf/html"
-  xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+	  xmlns:f="http://java.sun.com/jsf/core"
+>
 
 <h:head>
-  <title>PrimeFaces Hello World Example</title>
+  <title>Route Add/Update</title>
 </h:head>
 
 <h:body>
-  <h:form id="helloworld-form">
+  <h:form id="route-add-form">
 
-    <p:panel header="PrimeFaces Hello World Example">
+    <p:panel header="Metro Service - Route Add/Update">
       <h:panelGrid columns="2" cellpadding="4">
-        <h:outputText value="First Name: " />
-        <p:inputText id="first-name" value="#{helloWorld.firstName}" />
+        <h:outputText value="Route ID: " />
+        <p:inputText id="routeId" value="#{routeBean.routeId}" />
 
-        <h:outputText value="Last Name: " />
-        <p:inputText id="last-name" value="#{helloWorld.lastName}" />
+        <h:outputText value="Start Station : " />
+        <p:inputText id="startingStationId_x" value="#{routeBean.startingStationId}" />
+		
+        <h:outputText value="Start Station : " />
+		<p:selectOneMenu id="startingStationId" value="#{routeBean.startingStationId}" style="width:150px">
+			<f:selectItem itemLabel="Select Start Station" itemValue="" noSelectionOption="true" />
+			<f:selectItems value="#{routeBean.stationList}" />
+		</p:selectOneMenu>
+			
 
-        <p:commandButton id="submit" value="Submit"
-          update="greeting-panel"
-          oncomplete="PF('greetingDialog').show()" />
+        <h:outputText value="End Station : " />
+        <p:inputText id="endStationId_x" value="#{routeBean.endStationId}" />
+
+        <h:outputText value="End Station : " />
+		<p:selectOneMenu id="endStationId" value="#{routeBean.endStationId}" style="width:150px">
+			<f:selectItem itemLabel="Select End Station" itemValue="" noSelectionOption="true" />
+			<f:selectItems value="#{routeBean.stationList}" />
+		</p:selectOneMenu>
+			
+
+        <p:commandButton id="submit" value="Save" actionListener="#{routeBean.routeSaveAction}" oncomplete="PF('greetingDialog').show()" />
       </h:panelGrid>
     </p:panel>
 
-    <p:dialog header="Greeting" widgetVar="greetingDialog"
-      modal="true" resizable="false">
+    <p:dialog header="Route saved" widgetVar="greetingDialog" modal="true" resizable="false" showEffect="fade" closable="true" closeOnEscape="true" hideEffect="fade" >
       <h:panelGrid id="greeting-panel" columns="1" cellpadding="4">
-        <h:outputText value="#{helloWorld.showGreeting()}" />
+        <h:outputText value="Route saved" />
+        <p:commandButton id="popup_close" value="OK" oncomplete="PF('greetingDialog').hide();" />
       </h:panelGrid>
     </p:dialog>
 
