--- a/metro-ui-service/src/main/resources/META-INF/resources/routeList.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/routeList.xhtml
@@ -2,7 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+	  xmlns:f="http://java.sun.com/jsf/core"
+>
 
 <h:head>
   <title>Routes List</title>
@@ -19,6 +21,9 @@
                 paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                 rowsPerPageTemplate="5,10,15" 
                 lazy="true">
+        <f:facet name="header">
+            Routes List
+        </f:facet>				
         <p:column headerText="Id" sortBy="#{routeTO.routeId}" >
             <h:outputText value="#{routeTO.routeId}" />
         </p:column>
