--- a/metro-ui-service/src/main/resources/META-INF/resources/routeAdd.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/routeAdd.xhtml
@@ -18,6 +18,9 @@
         <h:outputText value="Route ID: " />
         <p:inputText id="routeId" value="#{routeBean.routeId}" />
 		
+        <h:outputText value="Route Number: " />
+        <p:inputText id="routeNumber" value="#{routeBean.routeNumber}" />
+		
         <h:outputText value="Start Station : " />
 		<p:selectOneMenu id="startingStationId" value="#{routeBean.startingStationId}" style="width:150px">
 			<f:selectItem itemLabel="Select Start Station" itemValue="" noSelectionOption="true" />
