--- a/metro-ui-service/src/main/resources/META-INF/resources/index.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/index.xhtml
@@ -9,9 +9,12 @@
 </h:head>
 
 <h:body>
+<center>
+<h1>Metro UI - Start Page</h1>
 
-<a href="/routeList.xhtml">Route List</a><br/>
-<a href="/routeAdd.xhtml">Route Add</a><br/>
+<h2><a href="/routeList.xhtml">Route List</a><br/></h2>
+<h2><a href="/routeAdd.xhtml">Route Add</a><br/></h2>
+</center>
 
 </h:body>
 </html>
