--- a/metro-ui-service/src/main/resources/META-INF/resources/routeList.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/routeList.xhtml
@@ -22,7 +22,7 @@
                 rowsPerPageTemplate="5,10,15" 
                 lazy="true">
         <f:facet name="header">
-            Routes List
+            Metro Routes List
         </f:facet>				
         <p:column headerText="RouteId" sortBy="#{routeTO.routeId}" >
             <h:outputText value="#{routeTO.routeId}" />
@@ -30,11 +30,11 @@
         <p:column headerText="RouteNumber" sortBy="#{routeTO.routeNumber}" >
             <h:outputText value="#{routeTO.routeNumber}" />
         </p:column>
-        <p:column headerText="Starting Station Id" sortBy="#{routeTO.startingStationId}" >
-            <h:outputText value="#{routeTO.startingStationId}" />
+        <p:column headerText="Starting Station Id" sortBy="#{routeTO.startingStationName}" >
+            <h:outputText value="#{routeTO.startingStationName}" />
         </p:column>
-        <p:column headerText="End Station Id" sortBy="#{routeTO.endStationId}" >
-            <h:outputText value="#{routeTO.endStationId}" />
+        <p:column headerText="End Station Id" sortBy="#{routeTO.endStationName}" >
+            <h:outputText value="#{routeTO.endStationName}" />
         </p:column>
     </p:dataTable>
 </h:form>
