Station UI added

--- a/metro-ui-service/src/main/resources/META-INF/resources/index.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/index.xhtml
@@ -14,6 +14,8 @@
 
 <h2><a href="/routeList.xhtml">Route List</a><br/></h2>
 <h2><a href="/routeAdd.xhtml">Route Add</a><br/></h2>
+<h2><a href="/stationList.xhtml">Station List</a><br/></h2>
+<h2><a href="/stationAdd.xhtml">Station Add</a><br/></h2>
 </center>
 
 </h:body>
