--- a/metro-ui-service/src/main/resources/META-INF/resources/index.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/index.xhtml
@@ -12,10 +12,12 @@
 <center>
 <h1>Metro UI - Start Page</h1>
 
-<h2><a href="/routeList.xhtml">         Route List          </a><br/></h2>
-<h2><a href="/routeAdd.xhtml">          Route Add           </a><br/></h2>
-<h2><a href="/stationList.xhtml">       Station List        </a><br/></h2>
-<h2><a href="/stationAdd.xhtml">        Station Add         </a><br/></h2>
+<h2><a href="/routeList.xhtml">         Route List                </a><br/></h2>
+<h2><a href="/routeAdd.xhtml">          Route Add                 </a><br/></h2>
+<h2><a href="/stationList.xhtml">       Station List              </a><br/></h2>
+<h2><a href="/stationAdd.xhtml">        Station Add               </a><br/></h2>
+<h2><a href="/userRegAdd.xhtml">        User Registration Add     </a><br/></h2>
+
 </center>
 
 </h:body>
