--- a/metro-ui-service/src/main/resources/META-INF/resources/routeList.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/routeList.xhtml
@@ -30,10 +30,10 @@
         <p:column headerText="RouteNumber" sortBy="#{routeTO.routeNumber}" >
             <h:outputText value="#{routeTO.routeNumber}" />
         </p:column>
-        <p:column headerText="Starting Station Id" sortBy="#{routeTO.startingStationName}" >
+        <p:column headerText="Starting Station Name" sortBy="#{routeTO.startingStationName}" >
             <h:outputText value="#{routeTO.startingStationName}" />
         </p:column>
-        <p:column headerText="End Station Id" sortBy="#{routeTO.endStationName}" >
+        <p:column headerText="End Station Name" sortBy="#{routeTO.endStationName}" >
             <h:outputText value="#{routeTO.endStationName}" />
         </p:column>
     </p:dataTable>
