--- a/metro-ui-service/src/main/resources/META-INF/resources/index.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/index.xhtml
@@ -11,12 +11,20 @@
 <h:body>
 <center>
 <h1>Metro UI - Start Page</h1>
-
-<h2><a href="/routeList.xhtml">         Route List                </a><br/></h2>
-<h2><a href="/routeAdd.xhtml">          Route Add                 </a><br/></h2>
-<h2><a href="/stationList.xhtml">       Station List              </a><br/></h2>
-<h2><a href="/stationAdd.xhtml">        Station Add               </a><br/></h2>
-<h2><a href="/userRegAdd.xhtml">        User Registration Add     </a><br/></h2>
+<table border="1">
+	<tr>
+		<td><h2><a href="/routeList.xhtml">         Route List                </a><br/></h2></td>
+		<td><h2><a href="/routeAdd.xhtml">          Route Add                 </a><br/></h2></td>
+	</tr>
+	<tr>
+		<td><h2><a href="/stationList.xhtml">       Station List              </a><br/></h2></td>
+		<td><h2><a href="/stationAdd.xhtml">        Station Add               </a><br/></h2></td>
+	</tr>
+	<tr>
+		<td><h2><a href="/userRegList.xhtml">       User Reg List             </a><br/></h2></td>
+		<td><h2><a href="/userRegAdd.xhtml">        User Reg Add              </a><br/></h2></td>
+	</tr>
+</table>
 
 </center>
 
