--- a/metro-ui-service/src/main/resources/META-INF/resources/userRegAdd.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/userRegAdd.xhtml
@@ -21,6 +21,12 @@
         <h:outputText value="User Name: " />
         <p:inputText id="userName" value="#{userRegBean.userName}" />
 		
+        <h:outputText value="Last Name: " />
+        <p:inputText id="lastName" value="#{userRegBean.lastName}" />
+		
+        <h:outputText value="Password: " />
+        <p:inputText id="password" value="#{userRegBean.password}" />
+		
         <h:outputText value="User Email: " />
         <p:inputText id="email" value="#{userRegBean.email}" />
 		
