--- a/metro-ui-service/src/main/resources/META-INF/resources/userRegAdd.xhtml
+++ b/metro-ui-service/src/main/resources/META-INF/resources/userRegAdd.xhtml
@@ -21,6 +21,9 @@
         <h:outputText value="User Name: " />
         <p:inputText id="userName" value="#{userRegBean.userName}" />
 		
+        <h:outputText value="First Name: " />
+        <p:inputText id="firstName" value="#{userRegBean.firstName}" />
+		
         <h:outputText value="Last Name: " />
         <p:inputText id="lastName" value="#{userRegBean.lastName}" />
 		
